--- a/6.2022/research.ipynb
+++ b/6.2022/research.ipynb
@@ -13,11 +13,14 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "from sklearn.experimental import enable_iterative_imputer\n",
+    "from sklearn.impute import SimpleImputer, IterativeImputer\n",
     "from sklearn.linear_model import SGDRegressor\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
     "from lightgbm import LGBMRegressor\n",
+    "from xgboost import XGBRegressor\n",
     "\n",
     "import tensorflow as tf\n",
     "from keras.models import Sequential\n",
@@ -25,6 +28,17 @@
     "\n",
     "\n",
     "valid_true, valid = aux.train_valid_split(aux.data, frac=0.0125, seed=19)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add_cols = ['F_1_7', 'F_1_12', 'F_1_13'] + ['F_3_19', 'F_3_21']\n",
+    "# pred_cols = [*[f'F_1_{n}' for n in range(15) if n not in (7, 12, 13)],\n",
+    "#              *[f'F_3_{n}' for n in range(25) if n not in (19, 21)]]"
    ]
   },
   {
@@ -36,25 +50,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [13:22<00:00, 53.49s/it, avg. score=0.555]\n",
-      "Final validation: 100%|██████████| 55/55 [00:00<00:00, 476.17it/s]\n"
+      "100%|██████████| 15/15 [08:16<00:00, 33.07s/it, avg. score=0.555]\n",
+      "Final validation: 100%|██████████| 55/55 [00:00<00:00, 456.74it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final validation score: 0.8783267769946155\n",
-      "Overall final score: 0.10180127772818637\n",
-      "CPU times: user 1h 25min, sys: 2min 2s, total: 1h 27min 3s\n",
-      "Wall time: 13min 24s\n"
+      "Final validation score: 0.8783267769946143\n",
+      "Overall final score: 0.10180127772818622\n",
+      "CPU times: user 56min 41s, sys: 55.6 s, total: 57min 36s\n",
+      "Wall time: 8min 18s\n"
      ]
     }
    ],
@@ -62,252 +76,234 @@
     "%%time\n",
     "predicted = aux.ImputeHelper(\n",
     "    aux.Step(aux.predictor, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
-    "    aux.Step(aux.transformer, 'all', imputer=SimpleImputer()),\n",
+    "    aux.Step(aux.transformer, 'all', initiator=SimpleImputer()),\n",
     ").run(valid, validate_on=valid_true)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [12:57<00:00, 51.86s/it, avg. score=0.555]\n"
+      "100%|██████████| 15/15 [07:29<00:00, 29.97s/it, avg. score=0.555]\n",
+      "Final validation: 100%|██████████| 15/15 [00:00<00:00, 479.14it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using `cosine_stats()` is deprecated! It may take a VERY long time on large data, work unstable or don't work at all.\n",
-      "87877 rows in 1758 chunks\n"
+      "Final validation score: 0.6478440895126936\n",
+      "Overall final score: 0.060344738210697677\n",
+      "CPU times: user 52min 14s, sys: 45.8 s, total: 52min 59s\n",
+      "Wall time: 7min 30s\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1758/1758 [07:41<00:00,  3.81it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Some values are NaN. Try decrease threshold.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Final validation: 100%|██████████| 55/55 [00:00<00:00, 461.12it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Final validation score: 0.8806708728036292\n",
-      "Overall final score: 0.10207657602880504\n",
-      "CPU times: user 1h 40min 55s, sys: 10min 55s, total: 1h 51min 51s\n",
-      "Wall time: 20min 48s\n"
+      "\n"
      ]
     }
    ],
    "source": [
-    "# %%time\n",
+    "%%time\n",
+    "# only 4th subset\n",
+    "predicted = aux.ImputeHelper(\n",
+    "    aux.Step(aux.predictor, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
+    ").run(valid, validate_on=valid_true)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__appempts__<br>\n",
+    "is improve if less than<br>\n",
+    "Final validation score: `0.64784`<br>\n",
+    "Overall final score: `0.060344`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 15/15 [32:00<00:00, 128.04s/it, avg. score=0.685]\n",
+      "Final validation: 100%|██████████| 15/15 [00:00<00:00, 346.49it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final validation score: 0.7726241830803292\n",
+      "Overall final score: 0.0714207626651449\n"
+     ]
+    }
+   ],
+   "source": [
     "# predicted = aux.ImputeHelper(\n",
-    "#     aux.Step(aux.predictor, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
-    "#     aux.Step(aux.cosine_stats, aux.subcol[1], threshold=0.7, subsample=0.05, backend='threading', seed=17),\n",
-    "#     aux.Step(aux.transformer, 'all', imputer=SimpleImputer()),\n",
+    "#     aux.Step(aux.predictor, aux.subcol[4], estimator=XGBRegressor(random_state=7, n_jobs=-1, n_estimators=1000, max_leaves=29)),\n",
     "# ).run(valid, validate_on=valid_true)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using `@parameter.initiator.allowed('any')` is redundant\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20/20 [13:08<00:00, 39.43s/it, avg. score=0.581]\n",
-      "Final validation: 100%|██████████| 20/20 [00:00<00:00, 470.17it/s]\n"
+      "Initiate values: 100%|██████████| 15/15 [06:51<00:00, 27.40s/it, avg. score=0.555]\n",
+      "100%|██████████| 15/15 [23:32<00:00, 94.20s/it, avg. score=0.258]\n",
+      "Final validation: 100%|██████████| 15/15 [00:00<00:00, 470.49it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final validation score: 0.6688705070162656\n",
-      "Overall final score: 0.06564987610368235\n"
+      "Final validation score: 0.5392914307519079\n",
+      "Overall final score: 0.04965443938319474\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "add_cols = ['F_1_7', 'F_1_12', 'F_1_13'] + ['F_3_19', 'F_3_21']\n",
-    "prepared = aux.ImputeHelper(\n",
-    "    aux.Step(aux.predictor, aux.subcol[4] + add_cols, estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
+    "predicted = aux.ImputeHelper(\n",
+    "    aux.Step(aux.predictor, aux.subcol[4],\n",
+    "             initiator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29),\n",
+    "             estimator=LGBMRegressor(random_state=11, n_jobs=-1, n_estimators=5000, num_leaves=37)),\n",
+    ").run(valid, validate_on=valid_true)\n",
+    "# Final validation score: 0.5392914307519079\n",
+    "# Overall final score: 0.04965443938319474"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "try below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/avagadro/anaconda3/envs/jupyter_default/lib/python3.9/site-packages/sklearn/impute/_iterative.py:699: ConvergenceWarning: [IterativeImputer] Early stopping criterion not reached.\n",
+      "  warnings.warn(\n",
+      "Final validation: 100%|██████████| 15/15 [00:00<00:00, 463.56it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final validation score: 0.5731784815583407\n",
+      "Overall final score: 0.05217318235972474\n",
+      "CPU times: user 1d 2h 29min 11s, sys: 26min 28s, total: 1d 2h 55min 40s\n",
+      "Wall time: 3h 46min 10s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# try this\n",
+    "predicted = aux.ImputeHelper(\n",
+    "    aux.Step(aux.transformer, aux.subcol[4], initiator=IterativeImputer(LGBMRegressor(n_jobs=-1, n_estimators=5000, num_leaves=37), random_state=11, max_iter=15)),\n",
     ").run(valid, validate_on=valid_true)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/3\n",
-      "5987/5987 [==============================] - 16s 3ms/step - loss: 1.0001 - mse: 1.0001\n",
-      "Epoch 2/3\n",
-      "5987/5987 [==============================] - 17s 3ms/step - loss: 1.0001 - mse: 1.0001\n",
-      "Epoch 3/3\n",
-      "5987/5987 [==============================] - 17s 3ms/step - loss: 1.0000 - mse: 1.0000\n",
-      "5987/5987 [==============================] - 9s 2ms/step\n",
-      "5413/5413 [==============================] - 8s 2ms/step\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Final validation: 100%|██████████| 35/35 [00:00<00:00, 380.44it/s]\n"
+      "Initiate values: 100%|██████████| 15/15 [07:14<00:00, 28.98s/it, avg. score=0.555]\n",
+      "Epoch 1 / 5: 100%|██████████| 15/15 [28:38<00:00, 114.57s/it, avg. score=0.25] \n",
+      "Epoch 2 / 5: 100%|██████████| 15/15 [26:03<00:00, 104.25s/it, avg. score=0.239]\n",
+      "Epoch 3 / 5: 100%|██████████| 15/15 [26:35<00:00, 106.35s/it, avg. score=0.239]\n",
+      "Epoch 4 / 5: 100%|██████████| 15/15 [31:25<00:00, 125.72s/it, avg. score=0.239]\n",
+      "Epoch 5 / 5: 100%|██████████| 15/15 [27:48<00:00, 111.21s/it, avg. score=0.238]\n",
+      "Final validation: 100%|██████████| 15/15 [00:00<00:00, 491.99it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final validation score: 0.9988624634525739\n",
-      "Overall final score: 0.1018428030899562\n"
+      "Final validation score: 0.5296390782289352\n",
+      "Overall final score: 0.048593891495186274\n"
      ]
     }
    ],
    "source": [
-    "# NN approach\n",
-    "tf.random.set_seed(11)\n",
-    "\n",
-    "model = Sequential([\n",
-    "    Input(shape=(45, )),\n",
-    "    # Dense(512, activation='selu'),\n",
-    "    Dense(512, activation='selu'),\n",
-    "    Dense(512, activation='selu'),\n",
-    "    Dense(35, activation='sigmoid'),\n",
-    "])\n",
-    "\n",
-    "# SGD / RMSprop / Adam / Adadelta / Adagrad / Adamax / Nadam / Ftrl\n",
-    "model.compile(optimizer='adam', loss='mse', metrics='mse')\n",
-    "pipeline = make_pipeline(\n",
-    "    SimpleImputer(),\n",
-    "    model\n",
-    ")\n",
-    "\n",
-    "add_cols = ['F_1_7', 'F_1_12', 'F_1_13'] + ['F_3_19', 'F_3_21']\n",
-    "pred_cols = [*[f'F_1_{n}' for n in range(15) if n not in (7, 12, 13)],\n",
-    "             *[f'F_3_{n}' for n in range(25) if n not in (19, 21)]]\n",
-    "\n",
-    "predicted = aux.ImputeHelper(\n",
-    "    # aux.Step(aux.predictor, aux.subcol[4] + add_cols, estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
-    "    aux.Step(aux.onestep_neural, 'all', pipeline, fill_columns=pred_cols, sequential__epochs=3),\n",
-    ").run(prepared, validate_on=valid_true)\n",
-    "# it's an improve if is better than\n",
-    "# Final validation score: 0.8783267769946155\n",
-    "# Overall final score: 0.10180127772818637"
+    "# try to submit\n",
+    "# predicted = aux.ImputeHelper(\n",
+    "#     aux.Step(aux.mice, aux.subcol[4], epochs=3,  seed=17,\n",
+    "#              initiator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29),\n",
+    "#              estimator=LGBMRegressor(n_jobs=-1, n_estimators=5000, num_leaves=37)),\n",
+    "# ).run(valid, validate_on=valid_true)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 20/20 [12:37<00:00, 37.89s/it, avg. score=0.797]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/3\n",
-      "329/329 [==============================] - 2s 3ms/step - loss: 1.0082 - mse: 1.0082\n",
-      "Epoch 2/3\n",
-      "329/329 [==============================] - 1s 3ms/step - loss: 1.0045 - mse: 1.0045\n",
-      "Epoch 3/3\n",
-      "329/329 [==============================] - 1s 3ms/step - loss: 1.0045 - mse: 1.0045\n",
-      "329/329 [==============================] - 1s 1ms/step\n",
-      "   97/11071 [..............................] - ETA: 17s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-06-25 00:25:21.865953: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 549817728 exceeds 10% of free system memory.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11071/11071 [==============================] - 17s 2ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Final validation: 100%|██████████| 55/55 [00:00<00:00, 242.98it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Final validation score: 0.9662174870419447\n",
-      "Overall final score: 0.11153378677407988\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# sub#2 to dummies\n",
-    "df = pd.concat([aux.subset[1], pd.get_dummies(aux.subset[2].astype('category')), aux.subset[3], aux.subset[4]], axis=1)\n",
-    "df_valid_true, df_valid = aux.train_valid_split(df, frac=0.0125, seed=19)\n",
+    "# # NN approach\n",
+    "# tf.random.set_seed(11)\n",
     "\n",
-    "tf.random.set_seed(11)\n",
-    "model = Sequential([\n",
-    "    Input(shape=(388, )),\n",
-    "    # Dense(512, activation='selu'),\n",
-    "    Dense(512, activation='tanh'),\n",
-    "    Dense(512, activation='tanh'),\n",
-    "    Dense(35, activation='sigmoid'),\n",
-    "])\n",
+    "# model = Sequential([\n",
+    "#     Input(shape=(25, )),\n",
+    "#     Dense(256, activation='tanh'),\n",
+    "#     Dense(256, activation='tanh'),\n",
+    "#     Dense(15, activation='tanh'),\n",
+    "# ])\n",
+    "# model.compile(optimizer='adam', loss='mse', metrics='mse')\n",
     "\n",
-    "# SGD / RMSprop / Adam / Adadelta / Adagrad / Adamax / Nadam / Ftrl\n",
-    "model.compile(optimizer='adam', loss='mse', metrics='mse')\n",
-    "pipeline = make_pipeline(\n",
-    "    SimpleImputer(),\n",
-    "    model\n",
-    ")\n",
-    "\n",
-    "add_cols = ['F_1_7', 'F_1_12', 'F_1_13'] + ['F_3_19', 'F_3_21']\n",
-    "pred_cols = [*[f'F_1_{n}' for n in range(15) if n not in (7, 12, 13)],\n",
-    "             *[f'F_3_{n}' for n in range(25) if n not in (19, 21)]]\n",
-    "\n",
-    "predicted = aux.ImputeHelper(\n",
-    "    aux.Step(aux.predictor, aux.subcol[4] + add_cols, estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
-    "    aux.Step(aux.onestep_neural, 'all', pipeline, fill_columns=pred_cols, sequential__epochs=3),\n",
-    ").run(df_valid, validate_on=df_valid_true)"
+    "# predicted = aux.ImputeHelper(\n",
+    "#     aux.Step(aux.transformer, aux.subcol[1] + aux.subcol[3], initiator=SimpleImputer()),\n",
+    "#     aux.Step(aux.onestep_neural, aux.subcol[3] + aux.subcol[4], initiator=SimpleImputer(), model=model, epochs=3),\n",
+    "# ).run(valid, validate_on=valid_true)\n",
+    "# # it is an improve if is less than\n",
+    "# # Final validation score: 0.8783267769946155\n",
+    "# # Overall final score: 0.10180127772818637"
    ]
   },
   {
@@ -319,20 +315,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "predicted.isna().any().any()"
    ]
