--- a/6.2022/submit.ipynb
+++ b/6.2022/submit.ipynb
@@ -24,70 +24,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "# Kaggle 0.88964\n",
-    "predicted = aux.ImputeHelper(\n",
-    "    aux.Step(aux.predictor, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=5000, num_leaves=29)),\n",
-    "    aux.Step(aux.transformer, aux.subcol[1] + aux.subcol[3], imputer=SimpleImputer(strategy='mean')),\n",
-    ").run(aux.data)"
+    "# %%time\n",
+    "# # Kaggle 0.88964\n",
+    "# predicted = aux.ImputeHelper(\n",
+    "#     aux.Step(aux.predictor, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=5000, num_leaves=29)),\n",
+    "#     aux.Step(aux.transformer, aux.subcol[1] + aux.subcol[3], imputer=SimpleImputer(strategy='mean')),\n",
+    "# ).run(aux.data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20/20 [34:51<00:00, 104.58s/it, avg. score=0.621]\n"
+      "Initiate values: 100%|██████████| 15/15 [1:43:59<00:00, 415.95s/it, avg. score=0.391]\n",
+      "Epoch 1 / 3: 100%|██████████| 15/15 [1:13:36<00:00, 294.41s/it, avg. score=0.288]\n",
+      "Epoch 2 / 3: 100%|██████████| 15/15 [1:11:49<00:00, 287.29s/it, avg. score=0.285]\n",
+      "Epoch 3 / 3: 100%|██████████| 15/15 [1:12:32<00:00, 290.16s/it, avg. score=0.285]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/3\n",
-      "16451/16451 [==============================] - 36s 2ms/step - loss: 1.0001 - mse: 1.0001\n",
-      "Epoch 2/3\n",
-      "16451/16451 [==============================] - 36s 2ms/step - loss: 1.0001 - mse: 1.0001\n",
-      "Epoch 3/3\n",
-      "16451/16451 [==============================] - 36s 2ms/step - loss: 1.0000 - mse: 1.0000\n",
-      "16451/16451 [==============================] - 19s 1ms/step\n",
-      "14800/14800 [==============================] - 18s 1ms/step\n"
+      "CPU times: user 1d 13h 43min 24s, sys: 22min 34s, total: 1d 14h 5min 58s\n",
+      "Wall time: 5h 22min 10s\n"
      ]
     }
    ],
    "source": [
-    "# tf.random.set_seed(11)\n",
-    "\n",
-    "# model = Sequential([\n",
-    "#     Input(shape=(45, )),\n",
-    "#     Dense(512, activation='tanh'),\n",
-    "#     Dense(256, activation='sigmoid'),\n",
-    "#     Dense(35, activation='tanh'),\n",
-    "# ])\n",
-    "\n",
-    "# model.compile(optimizer='ftrl', loss='mse', metrics='mse')\n",
-    "# pipeline = make_pipeline(\n",
-    "#     SimpleImputer(),\n",
-    "#     model\n",
-    "# )\n",
-    "\n",
-    "# add_cols = ['F_1_7', 'F_1_12', 'F_1_13'] + ['F_3_19', 'F_3_21']\n",
-    "# pred_cols = [*[f'F_1_{n}' for n in range(15) if n not in (7, 12, 13)],\n",
-    "#              *[f'F_3_{n}' for n in range(25) if n not in (19, 21)]]\n",
-    "\n",
-    "# predicted = aux.ImputeHelper(\n",
-    "#     aux.Step(aux.predictor, aux.subcol[4] + add_cols, estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
-    "#     aux.Step(aux.onestep_neural, 'all', pipeline, fill_columns=pred_cols, sequential__epochs=3),\n",
-    "# ).run(aux.data)"
+    "%%time\n",
+    "# Kaggle 0.87882\n",
+    "predicted = aux.ImputeHelper(\n",
+    "    aux.Step(aux.mice, aux.subcol[4], epochs=3,  seed=17,\n",
+    "             initiator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=7500, num_leaves=29),\n",
+    "             estimator=LGBMRegressor(n_jobs=-1, n_estimators=5000, num_leaves=37)),\n",
+    "    aux.Step(aux.transformer, aux.subcol[1] + aux.subcol[3], initiator=SimpleImputer()),\n",
+    ").run(aux.data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -127,27 +109,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0-F_1_14</td>\n",
-       "      <td>-0.000473</td>\n",
+       "      <td>-0.000905</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0-F_3_23</td>\n",
-       "      <td>-0.000291</td>\n",
+       "      <td>0.000365</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1-F_3_24</td>\n",
-       "      <td>0.006922</td>\n",
+       "      <td>-0.000817</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2-F_1_2</td>\n",
-       "      <td>-0.006544</td>\n",
+       "      <td>0.000551</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2-F_4_2</td>\n",
-       "      <td>0.205987</td>\n",
+       "      <td>0.366901</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -155,14 +137,14 @@
       ],
       "text/plain": [
        "    row-col     value\n",
-       "0  0-F_1_14 -0.000473\n",
-       "1  0-F_3_23 -0.000291\n",
-       "2  1-F_3_24  0.006922\n",
-       "3   2-F_1_2 -0.006544\n",
-       "4   2-F_4_2  0.205987"
+       "0  0-F_1_14 -0.000905\n",
+       "1  0-F_3_23  0.000365\n",
+       "2  1-F_3_24 -0.000817\n",
+       "3   2-F_1_2  0.000551\n",
+       "4   2-F_4_2  0.366901"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
