Iterative initiator approach; upd readme
not an improvement

--- a/6.2022/research.ipynb
+++ b/6.2022/research.ipynb
@@ -73,11 +73,11 @@
     }
    ],
    "source": [
-    "%%time\n",
-    "predicted = aux.ImputeHelper(\n",
-    "    aux.Step(aux.predictor, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
-    "    aux.Step(aux.transformer, 'all', initiator=SimpleImputer()),\n",
-    ").run(valid, validate_on=valid_true)"
+    "# %%time\n",
+    "# predicted = aux.ImputeHelper(\n",
+    "#     aux.Step(aux.predictor, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
+    "#     aux.Step(aux.transformer, 'all', initiator=SimpleImputer()),\n",
+    "# ).run(valid, validate_on=valid_true)"
    ]
   },
   {
@@ -112,11 +112,11 @@
     }
    ],
    "source": [
-    "%%time\n",
-    "# only 4th subset\n",
-    "predicted = aux.ImputeHelper(\n",
-    "    aux.Step(aux.predictor, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
-    ").run(valid, validate_on=valid_true)"
+    "# %%time\n",
+    "# # only 4th subset\n",
+    "# predicted = aux.ImputeHelper(\n",
+    "#     aux.Step(aux.predictor, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
+    "# ).run(valid, validate_on=valid_true)"
    ]
   },
   {
@@ -237,11 +237,10 @@
     }
    ],
    "source": [
-    "%%time\n",
-    "# try this\n",
-    "predicted = aux.ImputeHelper(\n",
-    "    aux.Step(aux.transformer, aux.subcol[4], initiator=IterativeImputer(LGBMRegressor(n_jobs=-1, n_estimators=5000, num_leaves=37), random_state=11, max_iter=15)),\n",
-    ").run(valid, validate_on=valid_true)"
+    "# %%time\n",
+    "# predicted = aux.ImputeHelper(\n",
+    "#     aux.Step(aux.transformer, aux.subcol[4], initiator=IterativeImputer(LGBMRegressor(n_jobs=-1, n_estimators=5000, num_leaves=37), random_state=11, max_iter=15)),\n",
+    "# ).run(valid, validate_on=valid_true)"
    ]
   },
   {
@@ -272,12 +271,87 @@
     }
    ],
    "source": [
-    "# try to submit\n",
     "# predicted = aux.ImputeHelper(\n",
     "#     aux.Step(aux.mice, aux.subcol[4], epochs=3,  seed=17,\n",
     "#              initiator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29),\n",
     "#              estimator=LGBMRegressor(n_jobs=-1, n_estimators=5000, num_leaves=37)),\n",
     "# ).run(valid, validate_on=valid_true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using `@parameter.initiator.allowed('any')` is redundant\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/avagadro/anaconda3/envs/jupyter_default/lib/python3.9/site-packages/sklearn/impute/_iterative.py:699: ConvergenceWarning: [IterativeImputer] Early stopping criterion not reached.\n",
+      "  warnings.warn(\n",
+      "100%|██████████| 15/15 [24:08<00:00, 96.59s/it, avg. score=0.238]\n",
+      "Final validation: 100%|██████████| 15/15 [00:00<00:00, 393.42it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final validation score: 0.5264524264802676\n",
+      "Overall final score: 0.04831689151912407\n",
+      "CPU times: user 11h 9min 39s, sys: 9min 23s, total: 11h 19min 2s\n",
+      "Wall time: 1h 32min 49s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "predicted = aux.ImputeHelper(\n",
+    "    aux.Step(aux.predictor, aux.subcol[4],\n",
+    "             initiator=IterativeImputer(LGBMRegressor(n_jobs=-1, n_estimators=5000, num_leaves=29), random_state=11, max_iter=5),\n",
+    "             estimator=LGBMRegressor(random_state=11, n_jobs=-1, n_estimators=5000, num_leaves=37)),\n",
+    ").run(valid, validate_on=valid_true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/avagadro/anaconda3/envs/jupyter_default/lib/python3.9/site-packages/sklearn/impute/_iterative.py:699: ConvergenceWarning: [IterativeImputer] Early stopping criterion not reached.\n",
+      "  warnings.warn(\n",
+      "Epoch 1 / 3: 100%|██████████| 15/15 [23:21<00:00, 93.44s/it, avg. score=0.238]\n",
+      "Epoch 2 / 3: 100%|██████████| 15/15 [23:59<00:00, 95.99s/it, avg. score=0.239]\n",
+      "Epoch 3 / 3: 100%|██████████| 15/15 [24:20<00:00, 97.34s/it, avg. score=0.239]\n",
+      "Final validation: 100%|██████████| 15/15 [00:00<00:00, 462.62it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final validation score: 0.540339984361973\n",
+      "Overall final score: 0.049523684565388866\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted = aux.ImputeHelper(\n",
+    "    aux.Step(aux.mice, aux.subcol[4], epochs=3,  seed=17,\n",
+    "             initiator=IterativeImputer(LGBMRegressor(n_jobs=-1, n_estimators=5000, num_leaves=29), random_state=11, max_iter=5),\n",
+    "             estimator=LGBMRegressor(n_jobs=-1, n_estimators=5000, num_leaves=37)),\n",
+    ").run(valid, validate_on=valid_true)"
    ]
   },
   {
