--- a/7.2022/submit.ipynb
+++ b/7.2022/submit.ipynb
@@ -12,6 +12,7 @@
     "\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.cluster import KMeans\n",
+    "from sklearn.mixture import GaussianMixture\n",
     "\n",
     "from tqdm import tqdm"
    ]
@@ -34,14 +35,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Kaggle 0.23745\n",
-    "km = KMeans(n_clusters=5, random_state=17).fit(scaled)\n",
-    "predicted = km.predict(scaled)"
+    "# # Kaggle 0.23745\n",
+    "# km = KMeans(n_clusters=5, random_state=17).fit(scaled)\n",
+    "# predicted = km.predict(scaled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Kaggle 0.50762\n",
+    "gmm = GaussianMixture(n_components=7, random_state=17).fit(scaled)\n",
+    "predicted = gmm.predict(scaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -73,27 +92,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>4</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>4</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>1</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -103,27 +122,27 @@
        "    <tr>\n",
        "      <th>97995</th>\n",
        "      <td>97995</td>\n",
-       "      <td>1</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97996</th>\n",
        "      <td>97996</td>\n",
-       "      <td>1</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97997</th>\n",
        "      <td>97997</td>\n",
-       "      <td>3</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97998</th>\n",
        "      <td>97998</td>\n",
-       "      <td>2</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97999</th>\n",
        "      <td>97999</td>\n",
-       "      <td>4</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -132,22 +151,22 @@
       ],
       "text/plain": [
        "          Id  Predicted\n",
-       "0          0          4\n",
-       "1          1          1\n",
-       "2          2          4\n",
-       "3          3          3\n",
-       "4          4          1\n",
+       "0          0          0\n",
+       "1          1          5\n",
+       "2          2          0\n",
+       "3          3          1\n",
+       "4          4          4\n",
        "...      ...        ...\n",
-       "97995  97995          1\n",
-       "97996  97996          1\n",
-       "97997  97997          3\n",
-       "97998  97998          2\n",
-       "97999  97999          4\n",
+       "97995  97995          5\n",
+       "97996  97996          4\n",
+       "97997  97997          6\n",
+       "97998  97998          6\n",
+       "97999  97999          3\n",
        "\n",
        "[98000 rows x 2 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
