--- a/7.2022/submit.ipynb
+++ b/7.2022/submit.ipynb
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.preprocessing import RobustScaler, MinMaxScaler, MaxAbsScaler, PowerTransformer\n",
     "from sklearn.cluster import KMeans\n",
     "from sklearn.mixture import GaussianMixture\n",
     "\n",
@@ -19,14 +19,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load & scale\n",
     "data_path = pathlib.Path().joinpath('data', 'data.csv')\n",
     "data = pd.read_csv(data_path, index_col='id')\n",
-    "scaled = pd.DataFrame(MinMaxScaler().fit_transform(data), index=data.index, columns=data.columns)"
+    "# scaled = pd.DataFrame(MinMaxScaler().fit_transform(data), index=data.index, columns=data.columns)\n",
+    "scaled = MaxAbsScaler().fit_transform(data)\n",
+    "\n",
+    "# Transform\n",
+    "scaled = PowerTransformer().fit_transform(scaled)"
    ]
   },
   {
@@ -42,11 +46,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Kaggle 0.50762\n",
+    "# Kaggle 0.50762: MinMaxScaler\n",
+    "# Kaggle 0.58013: MaxAbsScaler + PowerTransformer\n",
     "gmm = GaussianMixture(n_components=7, random_state=17).fit(scaled)\n",
     "predicted = gmm.predict(scaled)"
    ]
@@ -60,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -92,27 +97,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>5</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>4</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -122,27 +127,27 @@
        "    <tr>\n",
        "      <th>97995</th>\n",
        "      <td>97995</td>\n",
-       "      <td>5</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97996</th>\n",
        "      <td>97996</td>\n",
-       "      <td>4</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97997</th>\n",
        "      <td>97997</td>\n",
-       "      <td>6</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97998</th>\n",
        "      <td>97998</td>\n",
-       "      <td>6</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97999</th>\n",
        "      <td>97999</td>\n",
-       "      <td>3</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -151,22 +156,22 @@
       ],
       "text/plain": [
        "          Id  Predicted\n",
-       "0          0          0\n",
-       "1          1          5\n",
-       "2          2          0\n",
-       "3          3          1\n",
-       "4          4          4\n",
+       "0          0          2\n",
+       "1          1          3\n",
+       "2          2          2\n",
+       "3          3          5\n",
+       "4          4          0\n",
        "...      ...        ...\n",
-       "97995  97995          5\n",
-       "97996  97996          4\n",
-       "97997  97997          6\n",
-       "97998  97998          6\n",
-       "97999  97999          3\n",
+       "97995  97995          3\n",
+       "97996  97996          6\n",
+       "97997  97997          1\n",
+       "97998  97998          4\n",
+       "97999  97999          6\n",
        "\n",
        "[98000 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
